test/official_tests/field/call_nonfunction_field.lox
class Foo {}

var foo = Foo();
foo.bar = "not fn";

foo.bar(); // error: {"line":6,"message":"Only classes and functions are callable","type":"RuntimeError"}
